--- a/src/apps/news/templates/pagination.html
+++ b/src/apps/news/templates/pagination.html
@@ -38,7 +38,14 @@
             {% endif %}
         </ul>
     </div>
-    <div class="col text-center">Page {{ news.number }} of {{ news.paginator.num_pages }}</div>
+    <div class="col text-center">Page {{ news.number }} of {{ news.paginator.num_pages }} ({{ news.object_list.count }}
+        {% if news.object_list.count == 1 %}
+            item
+        {% else %}
+            items
+        {% endif %}
+        )
+    </div>
     <div class="col">
         <form method="get" class="input-group mb-3">
             <input type="number" class="form-control ms-2" placeholder="Page" aria-label="Page"
