--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,4 +1,4 @@
-<li class="nav-item dropdown">
+<li class="nav-item dropdown w-25">
     <div class="btn-group" role="group" aria-label="Vertical button group">
         <div class="btn-group" role="group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
@@ -15,7 +15,7 @@
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown"
+            <button type="button" class="btn btn-success dropdown-toggle px-5" data-bs-toggle="dropdown"
                     aria-expanded="false">
                 Menu
             </button>
