--- a/src/apps/rent/templates/rent/rent_list.html
+++ b/src/apps/rent/templates/rent/rent_list.html
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="#" class="card" style="text-decoration: none;">
+            <a href="{% url 'club_list' %}" class="card" style="text-decoration: none;">
                 <img src="{% static 'rent/static/images/rent/club.jpg' %}" class="card-img-top rent_image_settings"
                      alt="no-image">
                 <div class="card-body">
