--- a/src/templates/navbar/navbar_parts/user_menu.html
+++ b/src/templates/navbar/navbar_parts/user_menu.html
@@ -1,12 +1,13 @@
 <li class="nav-item dropdown w-25">
     <div class="btn-group" role="group" aria-label="Vertical button group">
         <div class="btn-group" role="group">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+            <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                Orders
+                Orders <span class="badge text-bg-secondary">
                 {% if request.rented_thing_count %}
-                    ({{ request.rented_thing_count }})
+                    {{ request.rented_thing_count }}
                 {% endif %}
+            </span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{% url 'room_order_list' %}">Room</a></li>
