--- a/src/apps/user/templates/login.html
+++ b/src/apps/user/templates/login.html
@@ -16,7 +16,7 @@
                 {% endif %}
             </div>
             {{ test }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-success">Login</button>
         </form>
     </div>
 {% endblock %}
