--- a/src/apps/rent/templates/rent/clubs/club_list.html
+++ b/src/apps/rent/templates/rent/clubs/club_list.html
@@ -14,6 +14,11 @@
 
 {% block content %}
     <h1>Clubs</h1>
+    {% if errors %}
+        <div class="p-3 text-danger-emphasis bg-danger-subtle border border-danger-subtle rounded-3">
+            {{ errors }}
+        </div>
+    {% endif %}
     <div class="row row-cols-3">
         {% for club in clubs %}
             <div class="col d-flex justify-content-center pt-3">
