--- a/src/apps/shop/templates/product_list.html
+++ b/src/apps/shop/templates/product_list.html
@@ -14,6 +14,11 @@
 
 {% block content %}
     <h1>Shop</h1>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+        {% for product in products %}
+            {% include 'product.html' %}
+        {% endfor %}
+    </div>
 {% endblock %}
 
 {% block rightsidebar %}
