--- a/src/apps/shop/templates/product_modal.html
+++ b/src/apps/shop/templates/product_modal.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-success">Make purchase</button>
                 </div>
             </div>
         </div>
